--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,18 +5,20 @@
 /*******************
   Imports
 *******************/
+@charset "utf-8";
+@import url("https://use.fontawesome.com/7d90fe5352.css");
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700");
 @import
-  "../_sass/_variables",
-  "../_sass/_global",
-  "../_sass/_base",
-  "../_sass/_grid",
-  "../_sass/_imagery",
-  "../_sass/_buttons",
-  "../_sass/_waves",
-  "../_sass/_nav",
-  "../_sass/_footer",
-  "../_sass/_page",
-  "../_sass/_cards",
-  "../_sass/_post",
-  "../_sass/_specific"
-;
+  "_variables",
+  "_global",
+  "_base",
+  "_grid",
+  "_imagery",
+  "_buttons",
+  "_waves",
+  "_nav",
+  "_media",
+  "_page",
+  "_cards",
+  "_post",
+  "_specific";
