--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,21 @@
----
-layout: default-large
----
-<div class="post">
-  <article class="post-content">
-    <h2 class="post-title">{{ page.title }}</h2>
-    <p class="post-image">{{ page.emojis }}</p>
-    <p class="post-date">{{ page.date | date: "%B %-d, %Y" }}</p>
-    {{ content }}
-  </article>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+{% include head.html %}
+<body>
+  {% include header.html %}
+  <main>
+    <div class="initial-section-post"></div>
+    <div class="wrapper">
+      <div class="post">
+        <article class="post-content">
+          <h2 class="post-title">{{ page.title }}</h2>
+          <p class="post-image">{{ page.emojis }}</p>
+          <p class="post-date">{{ page.date | date: "%B %-d, %Y" }}</p>
+          {{ content }}
+        </article>
+      </div>
+    </div>
+  </main>
+  {% include scripts.html %}
+</body>
+</html>
