--- a/_sass/_cards.scss
+++ b/_sass/_cards.scss
@@ -20,7 +20,7 @@
 }
 
 .card-content {
-  padding: $card-padding 0;
+  padding: $card-padding 0 0 0;
   margin: 0 auto;
   max-width: $max-inner-width-px;
   width: $max-width-percent;
