--- a/_sass/_media.scss
+++ b/_sass/_media.scss
@@ -1,10 +1,10 @@
 /* ==========================================================================
- Footer SCSS - specifics
+ media SCSS - specifics
  ========================================================================== */
-.footer-content {
+.media-content {
   text-align: center;
 
-  .footer-link {
+  .media-link {
     color: $white-color-opacity-high;
     text-decoration: none;
     font-size: $font-size-medium1;
@@ -16,7 +16,7 @@
     }
   }
   @media #{$medium-and-up} {
-    .footer-link {
+    .media-link {
       margin: 0 15px;
       font-size: $icon-size-large;
       line-height: 1;
