--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -1,217 +1,37 @@
 /* ==========================================================================
  Navigation SCSS - specifics
  ========================================================================== */
-nav {
-  .menu-button {
-    padding: 25px;
-    position: absolute;
-
-    a.button-collapse,
-    a.button-collapse i {
-      font-size: $icon-size-medium;
-      line-height: 1;
-      color: $white-color;
-    }
-    @media #{$medium-and-up} {
-      a.button-collapse,
-      a.button-collapse i {
-        font-size: $icon-size-large;
-        line-height: 1;
-        color: $white-color;
-      }
-    }
-  }
-}
-
 .side-nav {
-  position: fixed;
+  @extend .z-depth-1;
+  @include flexbox-column();
   width: $nav-width;
+  height: $full-height;
+  background-color: $black-color;
+  background-color: $black-color-opacity-high2;
+  overflow-y: auto;
   left: 0;
   top: 0;
-  margin: 0;
-  transform: translateX(-100%);
-  height: $full-height;
-  height: calc(#{$full-height} + #{$nav-unit});
-  height: -moz-calc($full-height);
-  padding-bottom: $nav-unit;
-  background-color: $black-color;
-  background-color: $black-color-opacity-high;
+  position: fixed;
   z-index: 999;
-  backface-visibility: hidden;
-  overflow-y: auto;
-  will-change: transform;
-  backface-visibility: hidden;
-  transform: translateX(-105%);
-  @extend .z-depth-1;
-
-  &.right-aligned {
-    right: 0;
-    transform: translateX(105%);
-    left: auto;
-    transform: translateX(100%);
-  }
-
-  .collapsible {
-    margin: 0;
-  }
 
   ul {
     margin: auto 0;
-    text-align: center;
-  }
-
-  li {
-    float: none;
-    display: inline;
-  }
-
-  a {
-    color: $sidenav-font-color;
-    display: block;
-    font-size: $sidenav-font-size;
-    padding: 0 ($sidenav-padding * 2);
-
-    &.button,
-    &.button-large {
-      margin: 10px 15px;
-    }
-
-    &.button,
-    &.button-large {
-      color: $button-raised-color;
-    }
-
-    &.button-large:hover,
-    &.button:hover {
-      background-color: lighten($button-raised-background, 5%);
-    }
-  }
-
-  .brand-logo {
-    text-align: center;
-    letter-spacing: 0.15em;
-    font-size: $link-size-medium;
-    padding: 30px 0;
-
-    &:hover {
-      font-weight: $font-weight-heavy;
-      color: $black-color;
-      background-color: $white-color;
-    }
-  }
-
-  .nav-link {
-    height: $sidenav-item-height;
-    line-height: $sidenav-item-height;
-    text-transform: uppercase;
-    font-weight: $font-weight-heavy;
+    padding: $spacing-vw 0;
     text-align: center;
 
-    &:hover {
-      color: $black-color;
-      background-color: $white-color;
-    }
-  }
-
-  .github-link {
-    text-align: center;
-    display: inline-block;
-  }
-
-  .button-link {
-    font-size: $link-size-small;
-    text-decoration: none;
-    font-weight: $font-weight-heavy;
-    color: $black-color;
-    background-color: $white-color-opacity-high;
-    text-transform: uppercase;
-    transition: 0.2s ease-out;
-    cursor: pointer;
-    margin: 40px 0;
-    padding: 10px 20px;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-
-    &:hover {
-      background-color: $white-color;
-      box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
-      color: $black-color;
-    }
-
-    i {
-      font-size: $icon-size-small;
-      margin-right: 0.4rem;
+    li {
+      float: none;
+      display: inline;
     }
   }
 }
-// Touch interaction
-
-.drag-target {
-  height: $full-height;
-  width: 10px;
-  position: fixed;
-  top: 0;
-  z-index: 998;
-}
-// Hidden side-nav for all sizes
-
-.side-nav.fixed {
-  .nav-link {
-    display: block;
-    padding: 0 $sidenav-padding;
-    color: $sidenav-font-color;
-
-    &:hover {
-      color: $black-color;
-      background-color: $white-color;
-    }
-  }
-}
-// Fixed side-nav shown
-
-.side-nav.fixed {
-  @include flexbox-column();
-  left: 0;
-  transform: translateX(0);
-  position: fixed;
-  // Right Align
-  &.right-aligned {
-    right: 0;
-    left: auto;
-  }
-}
-// Fixed sideNav hide on smaller
-@media #{$medium-and-down} {
+@media #{$large-and-down} {
   .side-nav {
-    &.fixed {
-      transform: translateX(-105%);
-
-      &.right-aligned {
-        transform: translateX(105%);
-      }
-    }
-
-    a {
-      padding: 0 $sidenav-padding;
-    }
+    width: 100%;
+    height: $min-height-px;
+    background-color: $black-color;
+    background-color: $black-color-opacity-mid;
+    position: absolute;
+    top: 0;
   }
-}
-
-.side-nav .collapsible-body li.active,
-.side-nav.fixed .collapsible-body li.active {
-  background-color: $black-color-opacity-high;
-
-  a {
-    color: $sidenav-font-color;
-  }
-}
-
-#sidenav-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 120vh;
-  background-color: $sidenav-overlay-color;
-  z-index: 997;
-  will-change: opacity;
 }
