--- a/_includes/code.html
+++ b/_includes/code.html
@@ -29,7 +29,7 @@
         {% endif %} {% endfor %}
       </div>
       <div class="center">
-        <a href="{{ page.link }}" target="_blank" id="download-button" class="button-large waves-effect waves-dark">
+        <a href="https://github.com/lshig" target="_blank" id="download-button" class="button-large waves-effect waves-dark">
           <i class="fa fa-github"></i>
           <span>All Repositories</span>
         </a>
