--- a/_includes/work.html
+++ b/_includes/work.html
@@ -14,6 +14,9 @@
               <div class="card-title__center">
                 {{ work.title }}
               </div>
+              <div class="card-emojis">
+                <p>{{ work.emojis }}</p>
+              </div>
               <div class="card-action__center">
                 <span class="card-footnote">{{ work.employer }}</span>
               </div>
