--- a/_sass/_specific.scss
+++ b/_sass/_specific.scss
@@ -16,7 +16,7 @@ Name Tag
   box-sizing: border-box;
   display: block;
   margin: 0 auto 80px;
-  width: $min-width-px;
+  width: 300px;
   height: 200px;
   background: $src-gradient-color;
   background: -webkit-linear-gradient(to left, $src-gradient-color , $dest-gradient-color);
