Clean up styling format

--- a/_sass/_media.scss
+++ b/_sass/_media.scss
@@ -1,6 +1,6 @@
 /* ==========================================================================
- media SCSS - specifics
- ========================================================================== */
+Media SCSS - specifics
+========================================================================== */
 .media-content {
   text-align: center;
 
@@ -15,6 +15,7 @@
       color: $white-color;
     }
   }
+
   @media #{$medium-and-up} {
     .media-link {
       margin: 0 15px;
