--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,17 +1,19 @@
 /* ==========================================================================
- Main SCSS
- Imports
- Variables
- ========================================================================== */
+Main SCSS
+Imports
+Variables
+========================================================================== */
+
 /*******************
-  Imports
+Imports
 *******************/
 @charset "utf-8";
 @import url("https://use.fontawesome.com/7d90fe5352.css");
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700");
- /*******************
-   TEXTUAL
- *******************/
+
+/*******************
+Text
+*******************/
 $base-font-family: 'Roboto', Helvetica, Arial, sans-serif;
 $base-font-size: 16px;
 $base-font-weight: 300;
@@ -31,8 +33,9 @@ $h3-font-size: 2.92rem !default;
 $h4-font-size: 2.28rem !default;
 $h5-font-size: 1.64rem !default;
 $h6-font-size: 1rem !default;
+
 /*******************
-  SIZING
+Sizing
 *******************/
 $nav-unit: 80px;
 $nav-width: 35%;
@@ -57,13 +60,15 @@ $max-width-percent: 90%;
 $on-palm: 600px;
 $on-laptop: 800px;
 $laptop-min-height: $min-height-px;
+
 @mixin media-query($device) {
    @media screen and (max-width: $device){
     @content;
   }
 }
+
 /*******************
-  COLORS
+Colors
 *******************/
 $base-text-color: #000;
 $primary-text-color: #000;
@@ -83,8 +88,9 @@ $grey-color-dark: darken($grey-color, 25%);
 $src-gradient-color: #5f2c82;
 $dest-gradient-color: #49a09d;
 $media-bg-color: $transparent-color !default;
+
 /*******************
-  BUTTONS
+Buttons
 *******************/
 $button-border: none !default;
 $button-font-size: 1.3rem !default;
@@ -98,8 +104,9 @@ $button-raised-background-hover: $white-color !default;
 $button-raised-color: #fff !default;
 $button-large-icon-font-size: 1.6rem !default;
 $button-large-height: $button-height * 1.5 !default;
+
 /*******************
-  MEDIA QUERIES
+Media Queries
 *******************/
 $small-screen-up: 601px !default;
 $medium-screen-up: 993px !default;
@@ -112,15 +119,17 @@ $large-and-up: "only screen and (min-width : #{$medium-screen-up})" !default;
 $small-and-down: "only screen and (max-width : #{$small-screen})" !default;
 $medium-and-down: "only screen and (max-width : #{$medium-screen})" !default;
 $large-and-down: "only screen and (max-width : #{$large-screen})" !default;
+
 /*******************
-  GRID
+Grid
 *******************/
 $num-cols: 12 !default;
 $gutter-width: 1.5rem !default;
 $element-top-margin: $gutter-width/3 !default;
 $element-bottom-margin: ($gutter-width*2)/3 !default;
+
 /*******************
-  NAVIGATION
+Navigation
 *******************/
 $navbar-height: 64px !default;
 $navbar-height-mobile: 56px !default;
@@ -134,6 +143,7 @@ $sidenav-hover-color: $black-color-opacity-high2 !default;
 $sidenav-overlay-color: $black-color-opacity-mid !default;
 $sidenav-padding: 20px !default;
 $sidenav-item-height: 48px !default;
+
 @import
   "_global",
   "_base",
