--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ site.title }}</title>
   <meta name="description" content="{{ site.description }}">
-  <meta name="keywords" content="Liz,Shigetoshi,GitHub,Jekyll,Sacramento,CA,code">
+  <meta name="keywords" content="Liz,Shigetoshi">
   <meta name="author" content="Liz Shigetoshi">
   <meta name="application-name" content="lshig.github.io">
   <meta name="theme-color" content="#49a09d">
@@ -28,7 +28,6 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="/images/favicons/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
-  <link rel="stylesheet" href="{{ "/main.min.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/main.min.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 </head>
