--- a/_includes/nametag.html
+++ b/_includes/nametag.html
@@ -1,4 +1,4 @@
-<a class="name-tag waves-effect waves-dark" href="/">
+<div class="name-tag">
   <div class="greeting-section">
     <h1 class="greeting">Hello</h1>
     <p class="my-name-is">my name is</p>
@@ -6,4 +6,4 @@
   <div class="name-section">
     <p class="name">Liz</p>
   </div>
-</a>
+</div>
