--- a/_includes/work.html
+++ b/_includes/work.html
@@ -10,7 +10,7 @@
         {% for work in site.posts %} {% if work.employer %}
         <a href="{{ work.link }}" target="_blank">
           <div class="col s12 m6 l6">
-            <div class="card project waves-effect waves-dark black-text">
+            <div class="card project black-text">
               <div class="card-title__center">
                 {{ work.title }}
               </div>
