--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -90,7 +90,7 @@ main {
     background-position: bottom center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url(./images/2016-lake-clementine.jpg);
+    background-image: url(../images/2016-lake-clementine.jpg);
     height: 100%;
     opacity: 0.7;
     min-height: $min-height-px;
@@ -120,7 +120,7 @@ main {
       background-position: bottom center;
       background-repeat: no-repeat;
       background-size: cover;
-      background-image: url(./images/2016-lake-clementine.jpg);
+      background-image: url(../images/2016-lake-clementine.jpg);
       padding: 0;
       opacity: 1;
       height: $min-height-px;
