--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,7 @@
 <body>
   {% include header.html %}
   <main>
-    <div class="initial-section">
-      <div class="typing-container">
-        <span class="intro-typing"></span>
-      </div>
-    </div>
+    <div class="initial-section"></div>
     {{ content }}
   </main>
   {% include scripts.html %}
