--- a/_sass/_specific.scss
+++ b/_sass/_specific.scss
@@ -12,6 +12,7 @@ Name Tag
 }
 
 .name-tag {
+  cursor: default;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -25,11 +26,6 @@ Name Tag
   border-radius: 8px;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.5),0 2px 10px 0 rgba(0,0,0,0.12);
   font-size: 0.9vw;
-
-  &:hover {
-    opacity: 0.8;
-    @extend .z-depth-1-half;
-  }
 
   .greeting-section {
     padding: 5px 0;
@@ -81,83 +77,5 @@ Name Tag
   img {
     -webkit-filter: grayscale(40%);
     filter: grayscale(40%);
-  }
-}
-
-.typing-container {
-  text-align: center;
-  opacity: 1;
-  background-color: $black-color-opacity-high2;
-  padding: 15px;
-  display: inline-block;
-  margin: 0;
-}
-
-.intro-typing,
-.typed-cursor {
-  opacity: 1;
-  display: inline;
-  letter-spacing: 1px;
-  font-weight: 700;
-  font-size: 40px;
-  line-height: 1;
-  text-transform: uppercase;
-  color: $white-color;
-}
-
-.typed-cursor {
-  opacity: 1;
-  -webkit-animation: blink 0.7s infinite;
-  -moz-animation: blink 0.7s infinite;
-  animation: blink 0.7s infinite;
-}
-
-@media #{$large-and-down} {
-  .typing-container,
-  .intro-typing,
-  .typed-cursor {
-    display: none;
-  }
-}
-
-@keyframes blink {
-  0% {
-    opacity: 1;
-  }
-
-  50% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes blink {
-  0% {
-    opacity: 1;
-  }
-
-  50% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-@-moz-keyframes blink {
-  0% {
-    opacity: 1;
-  }
-
-  50% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
   }
 }
