--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,6 @@
 {% for page in site.posts %}
 {% if page.text %}
-<div class="wrapper" id="about-me">
+<div class="end-wrapper" id="about-me">
   <div class="page">
     <div class="page-heading-wrapper">
       <div class="page-heading">
