--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -37,7 +37,7 @@ Page Default SCSS - specifics
 }
 
 .page-content {
-  padding: 60px 30px;
+  padding: 45px 30px 60px 30px;
   background-color: $white-color;
   background-color: $white-color-opacity-high;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.5),0 2px 10px 0 rgba(0,0,0,0.12);
@@ -126,7 +126,7 @@ Page Default SCSS - specifics
 @media only screen and (max-width: $large-screen) {
   .page-content {
     width: $full-width;
-    padding: 60px 15px;
+    padding: 45px 15px 60px;
 
     ul {
       margin: 0 10px 0 30px;
